--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-lazy-load": "^0.0.7",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.3.4",
-    "vue2-transitions": "^0.3.0"
+    "vue2-transitions": "^0.3.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.8",
