--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
     "firebase": "^9.12.1",
+    "ng2-charts": "^4.0.1",
     "nouislider": "^14.6.0",
     "vue": "^2.6.11",
+    "vue-chartjs": "^4.1.2",
     "vue-lazy-load": "^0.0.7",
     "vue-lazyload": "^1.3.3",
     "vue-recaptcha": "^2.0.3",
